--- a/html/index.html
+++ b/html/index.html
@@ -126,7 +126,7 @@
 
                         </li>
                         <li> <div class="flags">
-                            <div class="f">
+                            <div class="flag">新品
                             </div>
                         </div>
                             <div class="mi">
@@ -138,7 +138,7 @@
 
                         </li>
                         <li> <div class="flags">
-                            <div class="f">
+                            <div class="flag">下单立减300
                             </div>
                         </div>
                             <div class="xiao">
